Exception 처리 변경
`ExRateProvider`에는 IOException을 선언할 이유가 없음. 그래서 제외 후 `WebApiExRateProvider`에서 예외처리를 하도록 변경.